# libencoder

./: CMakeLists.txt  README.md
cmake/: FindFFmpeg.cmake
include/: export_import_def.hpp  libencoder.hpp  libencoder_api.hpp
src/: encoder.cpp  encoder.hpp  ffmpeg_encoder.cpp  ffmpeg_encoder.hpp  wrapper.cpp
test/: main.cpp
